--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "dependencies": {},
   "devDependencies": {
-    "vitepress": "^1.2.3"
+    "sass": "^1.77.5",
+    "vitepress": "^1.2.3",
+    "vue": "^3.4.27"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
