--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
+  "type": "module",
+  "dependencies": {},
   "devDependencies": {
+    "sass": "^1.77.5",
     "vitepress": "^1.2.3",
     "vue": "^3.4.27"
   },
